# routerbot

./: .dockerignore  .editorconfig  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  routerbot_config.example.yaml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  stage_task.md
.github/agents/: Backend Engineer.agent.md  Beast Mode.agent.md  Bug Fixer.agent.md  Code Reviewer.agent.md  DevOps Engineer.agent.md  Frontend Engineer.agent.md  Orchestrator.agent.md  Plan.agent.md  Product Manager.agent.md  QA Engineer.agent.md  Senior Dev Edition.agent.md
.github/workflows/: ci.yml  release.yml
docker/: prometheus.yml
docs/: AGENT_INSTRUCTIONS.md  ARCHITECTURE.md  CODING_STANDARDS.md  CONTAINER.md  IMPLEMENTATION_PLAN.md  INTEGRATION_TESTING.md
docs/stages/: STAGE_1_CORE_FOUNDATION.md  STAGE_2_PROVIDER_INTEGRATION.md  STAGE_3_PROXY_SERVER.md  STAGE_4_AUTH_MANAGEMENT.md  STAGE_5_OBSERVABILITY.md  STAGE_6_ADVANCED_FEATURES.md  STAGE_7_DASHBOARD_UI.md  STAGE_8_FUTURE_ROADMAP.md
src/routerbot/: __init__.py  cli.py
src/routerbot/auth/: __init__.py  api_key.py  audit.py  jwt.py  rbac.py  session.py  sso.py
src/routerbot/auth/advanced/: __init__.py  key_scoping.py  models.py  mtls.py  permissions.py  token_exchange.py  webhook_auth.py
src/routerbot/cache/: __init__.py  base.py  manager.py  memory.py  redis.py
src/routerbot/core/: __init__.py  config.py  config_models.py  cost.py  enums.py  exceptions.py  logging.py  model_prices.json  model_registry.py  tokens.py  types.py
src/routerbot/core/a2a/: __init__.py  client.py  models.py  registry.py
src/routerbot/core/batch/: __init__.py  batch_manager.py  job_queue.py  (+2 more)
src/routerbot/db/: __init__.py  engine.py  models.py  session.py
src/routerbot/evaluation/: __init__.py  benchmark.py  llm_judge.py  metrics.py  models.py  regression.py
src/routerbot/hub/: __init__.py  model_hub.py  models.py  playground.py  prompt_manager.py
src/routerbot/k8s/: __init__.py  autoscaler.py  crd_schemas.py  health_manager.py  models.py  operator.py
src/routerbot/observability/: __init__.py  callbacks.py  langfuse.py  opentelemetry.py  prometheus.py  team_logging.py  webhooks.py
src/routerbot/providers/: __init__.py  base.py  openai_compat.py  registry.py  transform.py
src/routerbot/proxy/: __init__.py  app.py  config_reload.py  error_handlers.py  openapi.py  state.py
src/routerbot/router/: __init__.py  budget.py  cooldown.py  fallback.py  health.py  retry.py  router.py  strategies.py
src/routerbot/utils/: __init__.py  hashing.py
tests/: __init__.py  conftest.py
tests/fixtures/anthropic/: chat_completion.json  chat_completion_tool_use.json
tests/fixtures/bedrock/: chat_completion.json  chat_completion_tool_use.json
tests/fixtures/cohere/: chat_completion.json  chat_completion_tool_use.json
tests/fixtures/deepseek/: chat_completion.json
tests/fixtures/gemini/: chat_completion.json  chat_completion_tool_call.json  embedding.json
tests/fixtures/groq/: chat_completion.json
tests/fixtures/mistral/: chat_completion.json
tests/fixtures/ollama/: chat_completion.json  chat_completion_tool_call.json  embedding.json
tests/fixtures/openai/: audio_transcription.json  chat_completion.json  chat_completion_tool_call.json  embedding.json  image_generation.json
tests/integration/: __init__.py
tests/integration/providers/: __init__.py  conftest.py  test_anthropic_integration.py  test_azure_integration.py  test_bedrock_integration.py  test_gemini_integration.py  test_multi_providers_integration.py  test_ollama_integration.py  test_openai_integration.py
tests/unit/: test_a2a_gateway.py  test_advanced_auth.py  test_ai_hub.py  test_anthropic_provider.py  test_api_keys.py  test_app.py  test_audit.py  test_auth_routes.py  test_auto_scaling.py  test_azure_provider.py  test_banned_keywords.py  test_batch_processing.py  test_bedrock_provider.py  test_budget_routing.py  test_cache.py  test_callbacks.py  test_config.py  test_content_moderation.py  test_dashboard_stats.py  test_database.py  test_evaluation.py  test_example_plugins.py  test_exceptions.py  test_gemini_provider.py  test_guardrails.py  test_ip_filter.py  test_jwt_auth.py  test_k8s_operator.py  test_langfuse.py  test_llm_routes.py  test_log_export.py  test_logging_hashing.py  test_mcp_gateway.py  test_middleware.py  test_model_management.py  test_multi_providers.py  test_ollama_provider.py  test_openai_provider.py  test_opentelemetry.py  test_pii_detection.py  (+18 more)
ui/dashboard/: index.html  package.json  playwright.config.ts  pnpm-lock.yaml  vite.config.ts
ui/dashboard/e2e/: auth.setup.ts  dashboard.spec.ts  guardrails.spec.ts  keys.spec.ts  logs.spec.ts  models.spec.ts  navigation.spec.ts  settings.spec.ts  spend.spec.ts  teams.spec.ts  tsconfig.json  users.spec.ts
ui/dashboard/src/: App.tsx  index.css  main.tsx
(+183 files in other folders)
